--- a/MaltsevDmitryTask_07/Task3/Task3.csproj
+++ b/MaltsevDmitryTask_07/Task3/Task3.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArithmeticalProgression.cs" />
+    <Compile Include="IIndexable.cs" />
+    <Compile Include="ISeries.cs" />
     <Compile Include="List.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
