--- a/MaltsevDmitryTask_07/Task4/Task4.csproj
+++ b/MaltsevDmitryTask_07/Task4/Task4.csproj
@@ -43,13 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bear.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Bonuses.cs" />
+    <Compile Include="IBonusEvent.cs" />
+    <Compile Include="IEnemyEvent.cs" />
     <Compile Include="Obstacles.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screen.cs" />
+    <Compile Include="Tree.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
