--- a/MaltsevDmitry_Task11/Task1/Task1.csproj
+++ b/MaltsevDmitry_Task11/Task1/Task1.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E47AAD0A-4077-4808-B1CC-A9795A59DBD8}</ProjectGuid>
+    <ProjectGuid>{649B7991-02FE-4A4F-A131-186696BC1A63}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Task4</RootNamespace>
-    <AssemblyName>Task4</AssemblyName>
+    <RootNamespace>Task1</RootNamespace>
+    <AssemblyName>Task1</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,20 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bear.cs" />
-    <Compile Include="Character.cs" />
-    <Compile Include="Bonuses.cs" />
-    <Compile Include="IBonusEvent.cs" />
-    <Compile Include="IEnemyEvent.cs" />
-    <Compile Include="Obstacles.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screen.cs" />
-    <Compile Include="Tree.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AllMathMethods\AllMathMethods.csproj">
+      <Project>{8dfbdcd2-42d9-4e44-b033-65b20578885a}</Project>
+      <Name>AllMathMethods</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
